[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "date-generator"
version = "0.2.0"
description = "Generate customizable date wordlists for pentesting and automation."
readme = "readme.md"
authors = [{ name = "William Le Roux" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/example/date-generator"
Documentation = "https://github.com/example/date-generator/tree/main/docs"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5.0",
]

[project.scripts]
date-generator = "date_generator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers --strict-config --cov=date_generator --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.coverage.run]
branch = true
source = ["date_generator"]
omit = [
    "tests/*",
]
